# gameoflife

./: Cargo.toml  README.md
src/: lib.rs
www/: index.html  index.js  package-lock.json  package.json
